<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activities.HomeActivity"
    android:background="@color/colorLight"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/select_functionnality"
        android:textSize="28sp" />

    <Button
        android:id="@+id/ActivityHomeVlilleButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.5"
        android:background="@drawable/home_button"
        android:text="@string/find_vlille"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#3F51B5" />

    <Button

        android:id="@+id/ActivityHomeRoubaixButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.5"
        android:background="@drawable/home_button"
        android:text="@string/discover_roubaix"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#3F51B5" />
</LinearLayout>